--- a/trunk/tweet-dl/src/properties/Languaje_es.properties
+++ b/trunk/tweet-dl/src/properties/Languaje_es.properties
@@ -8,3 +8,4 @@ SampleSizeKey=Tama\u00f1o Muestra
 DestinationFolderKey=Carpeta Destino
 SelectKey=Seleccionar
 StartKey=Iniciar Captura
+FileDeletionKey=Debe borrar todos los archivos de la captura
