--- a/tweet-dl/src/properties/Languaje_es.properties
+++ b/tweet-dl/src/properties/Languaje_es.properties
@@ -9,3 +9,4 @@ DestinationFolderKey=Carpeta Destino
 SelectKey=Seleccionar
 StartKey=Iniciar Captura
 FileDeletionKey=Debe borrar todos los archivos de la captura
+AskAuthKey=Solicitar Autenticaci\u00f3n
