--- a/wiki/Inicio.wiki
+++ b/wiki/Inicio.wiki
@@ -5,6 +5,7 @@
 Tweet-dl Es un proyecto de investigación del curso Tecnologías de la Web de la Universidad Nacional Andrés Bello.
 
 
+
 = TODO =
 
   * Interfaz Gráfica
@@ -12,3 +13,4 @@ Tweet-dl Es un proyecto de investigación del curso Tecnologías de la Web de la
   * Personalización de contenido a descargar.
   * Análisis de Datos y texto.
   * Definición de métricas de estudio.
+  * Incorporación de Apache Lucene para indexado y análisis de texto de los tweets
